Change lint to not abort on error

--- a/stateprogressbar/build.gradle
+++ b/stateprogressbar/build.gradle
@@ -39,6 +39,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 // Because the components are created only during the afterEvaluate phase, you must
