--- a/stateprogressbar/build.gradle
+++ b/stateprogressbar/build.gradle
@@ -25,11 +25,11 @@ ext {
 }
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 30
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
     }
@@ -66,5 +66,5 @@ afterEvaluate {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'androidx.appcompat:appcompat:1.3.0'
 }
